--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.details.MovieDetailActivity">
 
+    <TextView
+        android:id="@+id/Movieplot"
+        android:layout_width="197dp"
+        android:layout_height="275dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
