--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="hu.bme.aut.movieapp.ui.main.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_saved_movies"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_saved_movies"
         app:showAsAction="never" />
 </menu>
