--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,9 @@
         android:orderInCategory="100"
         android:title="@string/action_saved_movies"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_delete_movies"
+        android:orderInCategory="100"
+        android:title="@string/action_delete_movies"
+        app:showAsAction="never" />
 </menu>
