--- a/app/src/main/res/layout/movie_row.xml
+++ b/app/src/main/res/layout/movie_row.xml
@@ -9,7 +9,7 @@
             type="hu.bme.aut.movieapp.model.Movie" />
         <variable
             name="adapter"
-            type="hu.bme.aut.movieapp.ui.MovieAdapter" />
+            type="hu.bme.aut.movieapp.ui.main.MovieAdapter" />
     </data>
 
     <androidx.cardview.widget.CardView
